# DnD-Campaign-Manager

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Catch.cmake  CatchAddTests.cmake  Compiler.cmake  Dependencies.cmake  DndCli.cmake  DndCore.cmake  DndGui.cmake  DndTests.cmake  LICENSE  README.md
src/: CMakeLists.txt  cli_main.cpp  cmd_launcher.cpp  cmd_launcher.hpp  cmd_main.cpp  constants.hpp  dnd_config.hpp.in  dndmanager_config.hpp.in  gui_main.cpp  imgui_launcher.cpp  imgui_launcher.hpp  launcher.cpp  launcher.hpp  log.hpp  main.cpp
src/basic_mechanics/: abilities.hpp  dice.hpp  skills.hpp
src/cli/: CMakeLists.txt  cli_app.cpp  cli_app.hpp  cli_launcher.cpp  cli_launcher.hpp
src/cli/output/: CMakeLists.txt  command_line_output.cpp  command_line_output.hpp
src/cli/string_formatting/: CMakeLists.txt  display_format_visitor.cpp  display_format_visitor.hpp
src/cli_app/: cli_launcher.cpp
src/cli_app/output/: command_line_output.cpp  command_line_output.hpp
src/cmd_app/: CMakeLists.txt  cmd_launcher.cpp  cmd_launcher.hpp
src/cmd_app/output/: CMakeLists.txt
src/controllers/: CMakeLists.txt  content.cpp  content.hpp  content_controller.cpp  content_controller.hpp  content_holder.cpp  content_holder.hpp  groups.cpp  groups.hpp  trie.hpp
src/core/: CMakeLists.txt  app.hpp  attribute_names.hpp  content.cpp  content.hpp  content_keys.cpp  content_keys.hpp  content_library.hpp  data_result.hpp  groups.cpp  groups.hpp  log.hpp  referencing_content_library.hpp  session.cpp  session.hpp  storage_content_library.hpp  types.hpp
src/core/basic_mechanics/: CMakeLists.txt  abilities.cpp  abilities.hpp  character_progression.cpp  character_progression.hpp  dice.cpp  dice.hpp  dice_factory.cpp  dice_factory.hpp  magic_schools.cpp  magic_schools.hpp  skills.cpp  skills.hpp
src/core/content_filters/: content_filter.cpp  content_filter.hpp  content_piece_filter.cpp  content_piece_filter.hpp
src/core/content_visitors/: content_visitor.hpp  list_visitor.cpp  list_visitor.hpp  session_visitor.cpp
src/core/controllers/: CMakeLists.txt  content_holder.cpp  content_holder.hpp  content_library.hpp  groups.cpp  groups.hpp
src/core/errors/: CMakeLists.txt  errors.cpp  errors.hpp  parsing_error.cpp  parsing_error.hpp  runtime_error.cpp  runtime_error.hpp  validation_error.cpp  validation_error.hpp
src/core/exceptions/: CMakeLists.txt  validation_exceptions.cpp  validation_exceptions.hpp
src/core/models/: CMakeLists.txt  character.cpp  character.hpp  character_class.cpp  character_class.hpp  character_race.cpp  character_race.hpp  character_state.cpp  character_state.hpp  character_subclass.cpp  character_subclass.hpp  character_subrace.cpp  character_subrace.hpp  content_piece.cpp  content_piece.hpp  feature_holder.hpp  item.hpp  source_info.cpp  source_info.hpp  spell.cpp  spell.hpp
src/core/output/: CMakeLists.txt  command_line_output.cpp  command_line_output.hpp  output.hpp
src/core/parsing/: CMakeLists.txt  character_parsing.cpp  character_parsing.hpp  choice_parsing.cpp  choice_parsing.hpp  choosable_parsing.cpp  choosable_parsing.hpp  class_parsing.cpp  class_parsing.hpp  content_file_parser.cpp  content_file_parser.hpp  content_parser.cpp  content_parser.hpp  content_parsing.cpp  content_parsing.hpp  effects_parsing.cpp  effects_parsing.hpp  file_parser.cpp  file_parser.hpp  parse_optionals.hpp  parser.cpp  parser.hpp  parsing_exceptions.hpp  parsing_types.hpp  species_parsing.cpp  species_parsing.hpp  spell_file_parser.cpp  spell_file_parser.hpp  spell_parsing.cpp  spell_parsing.hpp  spell_sources_file_parser.cpp  spell_sources_file_parser.hpp  subparser.hpp  v2_file_parser.cpp  v2_file_parser.hpp
src/core/searching/: CMakeLists.txt  content_search.cpp  content_search.hpp  search_result.hpp  trie.hpp  trie_content_search.cpp  trie_content_search.hpp
src/core/text/: CMakeLists.txt  check_text.cpp  check_text.hpp  formatted_text.hpp  rich_text.cpp  rich_text.hpp  text.hpp  text_object.hpp
src/core/utils/: CMakeLists.txt  char_manipulation.cpp  char_manipulation.hpp  data_result.cpp  data_result.hpp  rich_text.hpp  string_manipulation.cpp  string_manipulation.hpp  types.hpp
src/core/validation/: CMakeLists.txt  validation_data.cpp  validation_data.hpp  validation_subdata.cpp  validation_subdata.hpp
src/core/visitors/: CMakeLists.txt  list_visitor.cpp  list_visitor.hpp  (+1 more)
src/gui/: CMakeLists.txt  gui_app.cpp  gui_app.hpp  gui_fonts.hpp  gui_launcher.cpp  gui_launcher.hpp
src/gui_app/: CMakeLists.txt  gui_app.cpp  gui_app.hpp  gui_launcher.cpp  imgui_launcher.cpp  imgui_launcher.hpp
src/imgui/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/models/: CMakeLists.txt  character.cpp  character.hpp  character_class.hpp  character_race.hpp  character_state.cpp  character_state.hpp  character_subclass.hpp  character_subrace.hpp  content_controller.hpp  creature.cpp  creature.hpp  creature_state.cpp  creature_state.hpp  feature_holder.hpp  spell.cpp  spell.hpp
src/output/: CMakeLists.txt  command_line_output.cpp  command_line_output.hpp  output.hpp
src/parsing/: CMakeLists.txt  content_file_parser.cpp  content_file_parser.hpp  content_parser.cpp  content_parser.hpp  effect_holder_groups_file_parser.cpp  effect_holder_groups_file_parser.hpp  effects_holder_groups_file_parser.cpp  effects_holder_groups_file_parser.hpp  feature_groups_file_parser.cpp  feature_groups_file_parser.hpp  parse_optionals.hpp  parsing_exceptions.hpp  parsing_types.hpp  string_groups_file_parser.cpp  string_groups_file_parser.hpp  subparser.hpp
src/runtime_measurement/: CMakeLists.txt  instrumentation_profiler.hpp  measurer.cpp  measurer.hpp  measuring.hpp  timer.hpp
src/x/: README.md  content_pieces.hpp  content_pieces.x  owned_content_pieces.x  reference_content_pieces.x
tests/: CMakeLists.txt  launcher_test.cpp
tests/controllers/: CMakeLists.txt  trie_test.cpp
tests/core/: CMakeLists.txt
tests/helper/: argv.hpp
tests/parsing/: content_parser_test.cpp
tests/testcore/: CMakeLists.txt  minimal_testing_content.cpp  minimal_testing_content.hpp
(+1014 files in other folders)
